# pybsimu

./: .gitignore  README.md  features.txt  kernal.pxd  kernel.pxd  kernel.pyx  setup.py
examples/1 - Cylindrically symmetric simulation of an einzel lens/: Makefile
examples/10 - Fitting/: Makefile  README  fit.cpp  solfield_100A.txt
examples/11 - 14 GHz ECR ion source extraction/: Makefile  ecr.cpp
examples/12 - Negative ion extraction parametric study/: Makefile  geom.dxf  simu.cpp
examples/2 - Ion extraction from plasma 2D/: Makefile  geom.dxf  plasma.cpp
examples/3 - Solenoid lens/: Makefile  sol.txt  solenoid.cpp
examples/4 - 3D einzel lens/: Makefile
examples/5 - Slit beam extraction from plasma/: Makefile  slit.cpp  slit.dxf
examples/6 - Slit beam extraction from plasma 3D/: slit3d.cpp
examples/7 - Wien filter/: Makefile
examples/8 - Cesium sputter source toy model/: Makefile  sputter.cpp  sputter.dxf
examples/9 - LIISA negative hydrogen ion source/: LIISA_bfield.txt  LIISA_geom.dxf  Makefile  liisa.cpp  liisa_cont.cpp  liisa_mg.cpp
pybsimu/: kernel.pyx  occimport.pxd  occimport.pyx
pyexamples/: 1.py
src/: Makefile  Makefile.am  Makefile.in  axisymmetricvectorfield.cpp  axisymmetricvectorfield.hpp  callback.hpp  ccolmatrix.cpp  ccolmatrix.hpp  cfifo.hpp  colormap.hpp  compmath.cpp  compmath.hpp  comptime.cpp  comptime.hpp  config.h  config.h.in  config.hpp  constants.hpp  convergence.cpp  convergence.hpp  coordmapper.hpp  coordmatrix.cpp  coordmatrix.hpp  crowmatrix.cpp  crowmatrix.hpp  csgobject_solid.cpp  csgobject_solid.hpp  diag_precond.cpp  diag_precond.hpp  dxf_solid.cpp  dxf_solid.hpp  empty_precond.hpp  epot_bicgstabsolver.cpp  epot_bicgstabsolver.hpp  epot_efield.cpp  epot_efield.hpp  epot_field.cpp  epot_field.hpp  epot_gssolver.cpp  epot_gssolver.hpp  (+213 more)
